kubernetes/clusters/homelab/apps/audiomuse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiomuse
  namespace: audiomuse
spec:
  ingressClassName: infra-traefik
  rules:
    - host: audiomuse.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiomuse
                port:
                  number: 8000
